{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 13,
  "lineage": "d5b402fc-99f7-306b-8743-d1358b9b3413",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "modulo7-ado-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f15365ac-4c3f-4998-9bdf-9046798f52a9/resourceGroups/modulo7-ado-agent/providers/Microsoft.Network/networkInterfaces/modulo7-ado-vm-nic",
            "internal_domain_name_suffix": "pfdwgjirhkzebdgkwjmoils5kc.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip",
                "primary": true,
                "private_ip_address": "192.168.0.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f15365ac-4c3f-4998-9bdf-9046798f52a9/resourceGroups/modulo7-ado-agent/providers/Microsoft.Network/publicIPAddresses/modulo7-ado-agent-pip",
                "subnet_id": "/subscriptions/f15365ac-4c3f-4998-9bdf-9046798f52a9/resourceGroups/modulo7-ado-agent/providers/Microsoft.Network/virtualNetworks/modulo7-ado-agent-vnet/subnets/ado-agent-subnet"
              }
            ],
            "location": "uksouth",
            "name": "modulo7-ado-vm-nic",
            "private_ip_address": "192.168.0.4",
            "private_ip_addresses": [
              "192.168.0.4"
            ],
            "resource_group_name": "modulo7-ado-agent"
          },
          "dependencies": [
            "azurerm_public_ip.modulo7-ado-pip",
            "azurerm_resource_group.tamops",
            "azurerm_subnet.subnet_name_ado_agent",
            "azurerm_virtual_network.ado_agent_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "modulo7-ado-nic-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f15365ac-4c3f-4998-9bdf-9046798f52a9/resourceGroups/modulo7-ado-agent/providers/Microsoft.Network/networkInterfaces/modulo7-ado-vm-nic|/subscriptions/f15365ac-4c3f-4998-9bdf-9046798f52a9/resourceGroups/modulo7-ado-agent/providers/Microsoft.Network/networkSecurityGroups/modulo7-ado-vm-nsg",
            "network_interface_id": "/subscriptions/f15365ac-4c3f-4998-9bdf-9046798f52a9/resourceGroups/modulo7-ado-agent/providers/Microsoft.Network/networkInterfaces/modulo7-ado-vm-nic",
            "network_security_group_id": "/subscriptions/f15365ac-4c3f-4998-9bdf-9046798f52a9/resourceGroups/modulo7-ado-agent/providers/Microsoft.Network/networkSecurityGroups/modulo7-ado-vm-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.modulo7-ado-nic",
            "azurerm_network_security_group.modulo7-ado-nsg",
            "azurerm_public_ip.modulo7-ado-pip",
            "azurerm_resource_group.tamops",
            "azurerm_subnet.subnet_name_ado_agent",
            "azurerm_virtual_network.ado_agent_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "modulo7-ado-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f15365ac-4c3f-4998-9bdf-9046798f52a9/resourceGroups/modulo7-ado-agent/providers/Microsoft.Network/networkSecurityGroups/modulo7-ado-vm-nsg",
            "location": "uksouth",
            "name": "modulo7-ado-vm-nsg",
            "resource_group_name": "modulo7-ado-agent",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.tamops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/f15365ac-4c3f-4998-9bdf-9046798f52a9/resourceGroups/modulo7-ado-agent/providers/Microsoft.Network/networkSecurityGroups/modulo7-ado-vm-nsg/securityRules/ssh-allow",
            "name": "ssh-allow",
            "network_security_group_name": "modulo7-ado-vm-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "modulo7-ado-agent",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.modulo7-ado-nsg",
            "azurerm_resource_group.tamops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "modulo7-ado-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/f15365ac-4c3f-4998-9bdf-9046798f52a9/resourceGroups/modulo7-ado-agent/providers/Microsoft.Network/publicIPAddresses/modulo7-ado-agent-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.90.248.133",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "modulo7-ado-agent-pip",
            "resource_group_name": "modulo7-ado-agent",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.tamops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_name_ado_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.0.0/24",
            "address_prefixes": [
              "192.168.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f15365ac-4c3f-4998-9bdf-9046798f52a9/resourceGroups/modulo7-ado-agent/providers/Microsoft.Network/virtualNetworks/modulo7-ado-agent-vnet/subnets/ado-agent-subnet",
            "name": "ado-agent-subnet",
            "resource_group_name": "modulo7-ado-agent",
            "virtual_network_name": "modulo7-ado-agent-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.tamops",
            "azurerm_virtual_network.ado_agent_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "ado_agent_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "guid": "25634779-3a11-40b2-8cca-b258e42e5f52",
            "id": "/subscriptions/f15365ac-4c3f-4998-9bdf-9046798f52a9/resourceGroups/modulo7-ado-agent/providers/Microsoft.Network/virtualNetworks/modulo7-ado-agent-vnet",
            "location": "uksouth",
            "name": "modulo7-ado-agent-vnet",
            "resource_group_name": "modulo7-ado-agent",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.tamops"
          ]
        }
      ]
    }
  ]
}